Added hero picture and sub pictures

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </div>
     
     <div class="hero">
-        <img src="" alt="" class="mainimg">
-        <div class="subimg">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        <img src="img/Tech Odyssey_Virtual Background.png" alt="" class="main-picture">
+        <div class="sub-pictures">
+            <img src="img/hana.jpg" alt="">
+            <img src="img/hana.jpg" alt="">
+            <img src="img/hana.jpg" alt="">
         </div>
     </div>
 </body>
