--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <hr></hr>
             <p>Lorem ipsum dolor sit amet</p>
         </div>
+        <div>
     </nav> -->
     
     <div class="head">
