--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
-    <!-- <nav>
+    <nav>
         <div>
             <h1>Title 1</h1>
             <hr></hr>
@@ -28,9 +28,8 @@
             <h1>Title 1</h1>
             <hr></hr>
             <p>Lorem ipsum dolor sit amet</p>
-        </div>
-        <div>
-    </nav> -->
+        </div> 
+    </nav>
     
     <div class="head">
         <h1>Find the project you love</h1>
