added script for burger bar

--- a/2/index.html
+++ b/2/index.html
@@ -45,5 +45,12 @@
             <img src="img/hana.jpg" alt="">
         </div>
     </div>
+
+    <div class="burger-menu" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
